--- a/sass/style.scss
+++ b/sass/style.scss
@@ -118,3 +118,24 @@ body {
     margin: 0 10px 0 0;
   }
 }
+
+/* Tags */
+
+.tag-size-1 {
+  font-size: 12px;
+}
+.tag-size-2 {
+  font-size: 14px;
+}
+.tag-size-3 {
+  font-size: 16px;
+}
+.tag-size-4 {
+  font-size: 20px;
+}
+.tag-size-5 {
+  font-size: 24px;
+}
+.tags li {
+  display: inline-block;
+}
